--- a/Capstone/Capstone.csproj
+++ b/Capstone/Capstone.csproj
@@ -142,8 +142,9 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Classes\Authentication.cs" />
-    <Compile Include="Classes\DatabaseHelper.cs" />
+    <Compile Include="Models\Authentication.cs" />
+    <Compile Include="Models\DashboardModel.cs" />
+    <Compile Include="Models\DatabaseHelper.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -196,6 +197,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Classes\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
