Fix jquery reference and session

--- a/WhiteBears/WhiteBears.csproj
+++ b/WhiteBears/WhiteBears.csproj
@@ -1064,6 +1064,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\sitemap.xml" />
+    <Content Include="Style\dashboard.css" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
