--- a/WhiteBears/packages.config
+++ b/WhiteBears/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="angularjs" version="1.7.2" targetFramework="net461" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
-  <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="bootstrap" version="4.1.3" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net461" />
@@ -22,6 +22,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="popper.js" version="1.14.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
