--- a/WhiteBears/WhiteBears.csproj
+++ b/WhiteBears/WhiteBears.csproj
@@ -1067,6 +1067,7 @@
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\sitemap.xml" />
     <Content Include="Style\dashboard.css" />
+    <Content Include="Style\teammanagement.css" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
