--- a/Whitebears-BlobStorage/Whitebears-BlobStorage.csproj
+++ b/Whitebears-BlobStorage/Whitebears-BlobStorage.csproj
@@ -242,6 +242,12 @@
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="C:\Users\jatin\Source\Repos\WhiteBears-Capstone\WhiteBears\WhiteBears.csproj">
+      <Project>{d94245c8-d1a7-40e3-9530-5f9f2182a4f8}</Project>
+      <Name>WhiteBears</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
