--- a/WhiteBears/WhiteBears.csproj
+++ b/WhiteBears/WhiteBears.csproj
@@ -147,8 +147,13 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Classes\BlobStorageRepository.cs" />
+    <Compile Include="Classes\Document.cs" />
+    <Compile Include="Classes\DocumentJSON.cs" />
+    <Compile Include="Classes\IBlobStorageRepository.cs" />
     <Compile Include="Controllers\AdminPageController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
+    <Compile Include="Controllers\DocumentReviewController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SignUpController.cs" />
     <Compile Include="Controllers\TeamManagementController.cs" />
@@ -157,11 +162,14 @@
     </Compile>
     <Compile Include="Models\AddUserModel.cs" />
     <Compile Include="Models\Authentication.cs" />
+    <Compile Include="Models\BlobViewModel.cs" />
     <Compile Include="Models\Company.cs" />
     <Compile Include="Models\DashboardModel.cs" />
     <Compile Include="Models\DatabaseHelper.cs" />
+    <Compile Include="Models\DocumentVersionsModel.cs" />
     <Compile Include="Models\PersonalNote.cs" />
     <Compile Include="Models\Project.cs" />
+    <Compile Include="Models\ReviewModel.cs" />
     <Compile Include="Models\Task.cs" />
     <Compile Include="Models\TeamManagementModel.cs" />
     <Compile Include="Models\User.cs" />
@@ -186,9 +194,14 @@
     <Content Include="bin\Microsoft.ApplicationInsights.dll" />
     <Content Include="bin\Microsoft.AspNet.TelemetryCorrelation.dll" />
     <Content Include="bin\Microsoft.AspNet.TelemetryCorrelation.xml" />
+    <Content Include="bin\Microsoft.Azure.KeyVault.Core.dll" />
+    <Content Include="bin\Microsoft.Azure.KeyVault.Core.xml" />
     <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll" />
     <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml" />
     <Content Include="bin\Microsoft.Web.Infrastructure.dll" />
+    <Content Include="bin\Microsoft.WindowsAzure.Storage.dll" />
+    <Content Include="bin\Microsoft.WindowsAzure.Storage.pdb" />
+    <Content Include="bin\Microsoft.WindowsAzure.Storage.xml" />
     <Content Include="bin\Newtonsoft.Json.dll" />
     <Content Include="bin\Newtonsoft.Json.xml" />
     <Content Include="bin\roslyn\csc.exe" />
@@ -252,6 +265,8 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Styling.css" />
+    <Content Include="dll\SautinSoft.Document.dll" />
+    <Content Include="dll\SautinSoft.Document.XML" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -1101,6 +1116,7 @@
     <Content Include="Views\AdminPage\Index.cshtml" />
     <Content Include="Views\Shared\_NotLoggedIn.cshtml" />
     <Content Include="Views\SignUp\Index.cshtml" />
+    <Content Include="Views\DocumentReview\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
