--- a/WhiteBears/packages.config
+++ b/WhiteBears/packages.config
@@ -23,6 +23,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="sautinsoft.document" version="3.5.9.26" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
   <package id="WindowsAzure.Storage" version="9.3.2" targetFramework="net461" />
