--- a/WhiteBears/WhiteBears.csproj
+++ b/WhiteBears/WhiteBears.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Models\DashboardModel.cs" />
     <Compile Include="Models\DatabaseHelper.cs" />
     <Compile Include="Models\DocumentVersionsModel.cs" />
+    <Compile Include="Models\ElementJSON.cs" />
     <Compile Include="Models\PersonalNote.cs" />
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\ReviewModel.cs" />
