--- a/WhiteBears/WhiteBears.csproj
+++ b/WhiteBears/WhiteBears.csproj
@@ -287,6 +287,7 @@
     <Content Include="obj\Debug\WhiteBears.csproj.FileListAbsolute.txt" />
     <Content Include="obj\Debug\WhiteBears.dll" />
     <Content Include="obj\Debug\WhiteBears.pdb" />
+    <Content Include="Properties\PublishProfiles\AdvancedSettings.pubxml.user" />
     <Content Include="Scripts\angular-animate.js" />
     <Content Include="Scripts\angular-animate.min.js" />
     <Content Include="Scripts\angular-aria.js" />
@@ -348,6 +349,9 @@
     <Content Include="obj\Debug\WhiteBears.csproj.CoreCompileInputs.cache" />
     <Content Include="obj\Debug\WhiteBears.csprojAssemblyReference.cache" />
     <Content Include="obj\Debug\WhiteBears.csprojResolveAssemblyReference.cache" />
+    <None Include="Properties\PublishProfiles\AdvancedSettings.pubxml" />
+    <None Include="Properties\PublishProfiles\WhiteBears - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\WhiteBears - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\i18n\angular-locale_af-na.js" />
     <Content Include="Scripts\i18n\angular-locale_af-za.js" />
