--- a/WhiteBears/WhiteBears.csproj
+++ b/WhiteBears/WhiteBears.csproj
@@ -153,17 +153,19 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProjectController.cs" />
     <Compile Include="Controllers\ProjectDocumentController.cs" />
-    <Compile Include="Controllers\ProjectNotesController.cs" />
-    <Compile Include="Controllers\ProjectTasksController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Authentication.cs" />
     <Compile Include="Models\DashboardModel.cs" />
     <Compile Include="Models\DatabaseHelper.cs" />
+    <Compile Include="Models\Document.cs" />
+    <Compile Include="Models\DocumentRole.cs" />
     <Compile Include="Models\PersonalNote.cs" />
     <Compile Include="Models\Project.cs" />
-    <Compile Include="Models\ProjectTaskModel.cs" />
+    <Compile Include="Models\ProjectNotes.cs" />
+    <Compile Include="Models\ProjectPageModel.cs" />
+    <Compile Include="Models\ProjectPageViewModel.cs" />
     <Compile Include="Models\Task.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\VerifyCredentials.cs" />
@@ -1114,7 +1116,6 @@
     <Content Include="Views\Home\UserDashboard.cshtml" />
     <Content Include="Views\Dashboard\Index.cshtml" />
     <Content Include="Views\Project\Index.cshtml" />
-    <Content Include="Views\ProjectTasks\Index.cshtml" />
     <Content Include="Scripts\umd\popper.min.js.map" />
     <Content Include="Scripts\umd\popper.js.map" />
     <Content Include="Scripts\umd\popper-utils.min.js.map" />
@@ -1124,8 +1125,9 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
-    <Content Include="Views\ProjectDocument\Index.cshtml" />
-    <Content Include="Views\ProjectNotes\Index.cshtml" />
+    <Content Include="Views\Project\TaskView.cshtml" />
+    <Content Include="Views\Project\NoteView.cshtml" />
+    <Content Include="Views\Project\DocumentView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
